--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "next": "beta",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-grid-system": "^2.9.2"
+    "react-grid-system": "^2.9.2",
+    "react-icons": "^2.2.5",
+    "react-md": "^1.1.0-alpha-5"
   }
 }
