--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^2.2.5",
     "react-interval": "^2.0.1",
     "react-md": "^1.1.0-alpha-5",
+    "react-motion-ui-pack": "^0.10.3",
     "react-timeout": "^1.0.1"
   }
 }
