--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "standard": "^10.0.2"
   },
   "dependencies": {
+    "material-ui": "^0.18.5",
     "next": "beta",
     "react": "^15.6.1",
     "react-delay": "0.0.4",
