Added working form using nodemailer and gmail

--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "standard": "^10.0.2"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
     "material-ui": "^0.18.5",
     "next": "beta",
+    "nodemailer": "^4.0.1",
     "react": "^15.6.1",
     "react-delay": "0.0.4",
     "react-dom": "^15.6.1",
