--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "npm run lint && next",
     "build": "npm run lint && next build",
-    "start": "next start",
+    "start": "set NODE_ENV=production&&node server.js",
     "lint": "standard",
     "test": "npm run lint && ava",
     "export": "next build && next export"
