--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "material-ui": "^0.18.5",
+    "material-ui": "^0.18.6",
     "next": "beta",
     "nodemailer": "^4.0.1",
     "react": "^15.6.1",
@@ -47,6 +47,8 @@
     "react-interval": "^2.0.1",
     "react-md": "^1.1.0-alpha-5",
     "react-motion-ui-pack": "^0.10.3",
+    "react-no-ssr": "^1.1.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-timeout": "^1.0.1"
   }
 }
