--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "material-ui": "^0.18.6",
     "next": "beta",
     "nodemailer": "^4.0.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "react": "^15.6.1",
     "react-delay": "0.0.4",
     "react-dom": "^15.6.1",
